# opencv_study_by_log

./: .gitmodules  CMakeLists.txt  README.md
scripts/: build.sh
src/: main.cpp
